# bucket-streamer

./: .dockerignore  .gitignore  AGENTS.md  ANALYSIS.md  Cargo.toml  Dockerfile  QUICK_REFERENCE.md  TEST_PLAN.md  docker-compose.yml  repo
.opencode/: opencode.json
.opencode/command/: commit.md
.opencode/rules/: advice-giving.md  commit-style.md  formatting.md
crates/bucket-streamer/: Cargo.toml
crates/bucket-streamer/src/: config.rs  main.rs
crates/bucket-streamer/src/pipeline/: avio.rs  decoder.rs  encoder.rs  fetcher.rs  mod.rs  session.rs
crates/bucket-streamer/src/server/: mod.rs  protocol.rs  router.rs  websocket.rs
crates/bucket-streamer/src/storage/: backend.rs  mod.rs
crates/repo-cli/: Cargo.toml
crates/repo-cli/src/: error.rs  main.rs
crates/repo-cli/src/commands/: convert.rs  devshell.rs  mod.rs  output.rs
crates/streaming-cli/: Cargo.toml
crates/streaming-cli/src/: main.rs
docs/: design.md  design_notes.md  design_stage1.md  idea_pure_rust_demux.md  idea_webcodecs_raw_frames.md  research_fast_ffmpeg.md  research_helixm_blog.md  utils.md
docs/benchmarks/: 2025-12-25_release_baseline.md
docs/tasks/: stage1_task_01_project_skeleton.md  stage1_task_02_repo_cli_base.md  stage1_task_03_h265_converter.md  stage1_task_03a_design_docs_url_format.md  stage1_task_04_server_config.md  stage1_task_05_storage_backend.md  stage1_task_06_ws_protocol.md  stage1_task_07_axum_server.md  stage1_task_08_avio_spike.md  stage1_task_09_decoder_module.md  stage1_task_10_jpeg_encoder.md  stage1_task_11_pipeline_integration.md  stage1_task_11a_decoder_simplify.md  stage1_task_12_streaming_cli.md  stage1_task_12a_offsets_format.md
