[package]
name = "bucket-streamer"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum = { workspace = true, features = ["ws"] }
bytes.workspace = true
clap = { workspace = true, features = ["derive"] }
ffmpeg-next.workspace = true
ffmpeg-sys-next.workspace = true
object_store = { workspace = true, features = ["aws"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
tower.workspace = true
tower-http = { workspace = true, features = ["trace"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
futures-util.workspace = true

[dev-dependencies]
tempfile = "3"
